--- a/Acme.BookStore/aspnet-core/src/Acme.BookStore.DbMigrator/appsettings.json
+++ b/Acme.BookStore/aspnet-core/src/Acme.BookStore.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=.;Database=BookStoreNext;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "IdentityServer": {
     "Clients": {
