--- a/Acme.BookStore/aspnet-core/src/Acme.BookStore.Web/appsettings.json
+++ b/Acme.BookStore/aspnet-core/src/Acme.BookStore.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44397"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=.;Database=BookStoreNext;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AuthServer": {
     "Authority": "https://localhost:44397"
